--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "apollo-server-express": "^3.13.0",
     "apollo-server-fastify": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.2",
     "fastify": "^4.25.2",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -45,6 +47,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
