--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "apollo-server-fastify": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.2",
-    "fastify": "^4.25.2",
+    "fastify": "^3.17.0",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
